wp-content/themes/tcs-responsive/css/register-login.css
/*
hover style icons
*/
.animeButton, .animeButtonHover {
    width: 48px;
    height: 48px;
    display: inline-block;
    background: url(../i/shareButtons.png) no-repeat;
    cursor: pointer;
}
.shareFacebook {

}

.shareFacebookHover {
    background-position: 0 bottom;
}

.shareGoogle {
    background-position: -64px 0;
}

.shareGoogleHover {
    background-position: -64px bottom;
}

.shareTwitter {
    background-position: -128px 0;
}

.shareTwitterHover {
    background-position: -128px bottom;
}

.shareGithub {
    background-position: -192px 0;
}

.shareGithubHover {
    background-position: -192px bottom;
}

.animeMan {
    width: 40px;
    height: 44px;
    display: block;
    float: left;
    margin: 0 auto;
    background: url(../i/menButtons.png) no-repeat;
    cursor: pointer;
    margin-top: -3px;
}

.animeMan{
    border-top: 1px solid #fff;
}
.row.planToCompete{
    margin-top: 15px;
    margin-bottom: 15px;
}
.row.planToCompete label{
    display: block;
    float: left;
}
.options{
    display: inline-block;
}
.options .checkBox{
    float: left;
    margin-top: 5px;
    margin-left: 5px;
    margin-right: 5px;
}
.manBlue:hover {
    background-position: 0 -44px;
}

.manGreen {
    background-position: -40px 0;
}

.manGreen:hover {
    background-position: -40px -44px;
}

.manYellow {
    background-position: -80px 0;
}

.manYellow:hover {
    background-position: -80px -44px;
}

.manGrey {
    background-position: -120px 0;
}

.manGrey:hover {
    background-position: -120px -44px;
}


#register input[type="email"],
#register input[type="number"],
#register input[type="password"],
#register input[type="tel"],
#register input[type="url"],
#register input[type="text"]{
    padding:2px 6px;
}
/*
backgorund modal
*/
#bgModal {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background: transparent url(../i/bg-modal.png) repeat;
    display: none;
    z-index: 999;
}
/*
common
*/
.modal {
    display: none;
    position: fixed;
    left: 50%;
    top: 50%;
    z-index: 1000;
    width: 950px;
    border: rgba(0,0,0,0.2) solid 10px;
    border-radius: 10px;
    font-size: 14px;
}
.modal .btnClose {
    background: transparent url(../i/closeModal.png) no-repeat top left;
    width: 13px;
    height: 13px;
    display: block;
    position: absolute;
    top: 10px;
    right: 10px;
    z-index: 1;
}
.modal .btnClose:hover{
    background-position: bottom left;
}

.modal .content {
    background: #fff;
    padding: 20px;
    border-radius: 5px;
}

.modal .content h2 {
    padding-bottom: 10px;
    border-bottom: 1px solid #e7e7e7;
    font-size: 30px;
    color: #333;
}
.modal input::-webkit-input-placeholder {
    color: transparent;
}
.modal input:-moz-placeholder {
    color: transparent;
}
.modal input::-moz-placeholder {
    color: transparent;
}
.modal input:-ms-input-placeholder {
    color: transparent;
}
/*
Register modal
*/
.row .socialUnavailableErrorMessage {
    color: #c00;
    display: none;
}
#register .content,
#login .content{
    padding: 10px 20px;
}

#register .content p,
#login .content p{
    color: #666;
}

	#register .content h3,
	#login .content h3 {
		padding: 0px 0 3px;
		border-bottom: 1px solid #e7e7e7;
		font-size: 18px;
		color: #333;
	}
	#register #socials,
	#login #socials {
		padding: 4px 0 6px;
	}

		#register #socials a,
		#register #socials p,
		#login #socials a,
		#login #socials p {
			float: left;
			margin-right: 15px;
		}

		#register #socials p,
		#login #socials p {
			padding: 5px 0 5px 30px;
			line-height: 18px;
		}

	#register form,
	#register form p.row,
	#login form,
	#login form p.row {
		padding: 2px 0 0;
		line-height: 26px;
	}

		#register form p.row.lSpace {
			margin-left: 200px;
		}
		#login form p.row.lSpace {
			margin-left: 100px;
		}

		#register form p.row.info,
		#login form p.row.info {
			width: 349px;
			font-size: 12px;
			padding: 0;
			line-height: 17px;
		}
		#register form p.row.btns,
		#login form p.row.btns {
			padding: 4px 0;
		}

			#register form p.row label,
			#login form p.row label {
				display: inline-block;
				width: 180px;
				text-align: right;
				padding-right: 15px;
				color: #333;
			}
			#login form p.row label{
				width: 80px;
			}
			#register form p.row.lSpace label,
			#login form p.row.lSpace label {
				width: 349px;
				text-align: left;
				padding: 0;
			}
				#register input[type="checkbox"],
				#login input[type="checkbox"] {
					margin: 0 4px 0 0;
				}
			#register form p.row input[type="text"],
			#register form p.row input[type="password"],
			#login form p.row input[type="text"],
			#login form p.row input[type="password"],
			#login form p.row .customSelect{
				width: 336px;
				background: #fafafa;
				border: 1px solid #e1e1e1;
				height: 22px;
				line-height: 16px;
			}
			#register form p.row input[type="text"].invalid,
			#register form p.row input[type="password"].invalid,
			#login form p.row input[type="text"].invalid,
			#login form p.row input[type="password"].invalid {
				background: #ffedee;
				border: 1px solid #c00;
			}

			#register form p.row span.err1,
			#register form p.row span.err2,
			#register form p.row span.err3,
			#register form p.row span.err4,
			#register form p.row span.err5,
			#register form p.row span.err6,
			#register form p.row span.err7,
			#loginForm span.err4,
			#loginForm span.err3,
			#login form p.row span.err1,
			#login form p.row span.err2 {
				margin-left: 14px;
				color: #c00;
				display: none;
			}

			#login form p.row span.err1 {
				position: relative;
				top: 15px;
			}

			#register form p.row span.valid {
				background: transparent url(../i/validation-tick.png) no-repeat left center;
				display: none;
				min-width: 18px;
				height: 18px;
				padding-left: 27px;
				margin-left: 14px;
				vertical-align: middle;
				color: #7abd00;
			}

			/* strength password */
			#register form p.row.info .strength{
				color: #c00;
				float: right;
			}
/* ... */

